--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,4 +2,8 @@
     --font-family-primary: 'open-sans', sans-serif;
     --font-family-secondary: 'Cormorant', serif;
     --font-color-primary: #FFFFFF;
+    --font-color-secondary: #BAE249;
+    --font-color-secondary-grey: #899D9D;
+    --bg-color-primary: #1D2F30;
+    --bg-color-secondary: #0B1919;
 }
