--- a/styles/header.css
+++ b/styles/header.css
@@ -1,20 +1,13 @@
 .header{
-    background-color: #1D2F30;
+    background-color: var(--bg-color-primary);
 }
 .header__content{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-.navigation-list{
-    display: flex;
-}
-.navigation-item{
-
-}
-.header__logo, .header__nav, .header__buttons{
     padding: 18px 0;
 }
-.navigation-item:nth-child(2), .navigation-item:nth-child(3), .navigation-item:nth-child(4), .log-in-button{
-    margin-left: 64px;
+.header__buttons{
+    display: flex;
+    gap: 64px;
 }
