--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300..700;1,300..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 body{
     font-family: var(--font-family-primary);
@@ -15,5 +16,6 @@ body{
     font-weight: 400;
 }
 main{
+    background-color: var(--bg-color-primary);
     position: relative;
 }
