--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,10 +1,11 @@
 .footer-feedback {
     background-image: url("../images/footer.png");
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    height: 463px;
-    width: 100%;
     position: relative;
+    padding: 60px;
+
 }
 .footer-feedback:after {
     content: '';
@@ -18,37 +19,34 @@
     z-index: 1;
 }
 .footer-feedback__content{
-    display: flex;
     flex-direction: column;
-    vertical-align: center;
     z-index: 2;
-    position: relative;
-    padding-top: 60px;
+    position: relative
 }
 .footer-feedback__content p{
     line-height: 150%;
-    margin-top: 16px;
-    width: 836px;
+    max-width: 836px;
+    margin-bottom: 24px;
 }
 .footer-feedback__content h2{
     font-family: var(--font-family-secondary);
     font-style: italic;
     font-size: 48px;
     font-weight: 700;
+    margin-bottom: 16px;
 }
 form{
     z-index: 3;
     width: 350px;
 }
-input {
+
+.field, #button{
+    background-color: #FFFFFF;
+    color: var(--font-color-secondary-grey);
+    margin-bottom: 24px;
     width: 100%;
     height: 45px;
     padding: 10px 16px 10px 16px;
-    margin-top: 24px;
-}
-.field{
-    background-color: #FFFFFF;
-    color: var(--font-color-secondary-grey);
 }
 #button{
     width: 145px;
@@ -57,6 +55,20 @@ input {
     font-weight: 700;
     color: #0B1919;
     line-height: 100%;
+    cursor: pointer;
+}
+#button:hover{
+    background-color: #91AC46;
+}
+#button:focus{
+    border: 1px solid #83A440;
+}
+#button:active{
+    background-color: #688B05;
+}
+#button:disabled{
+    background-color: #899D9D;
+    color: #1D2F30;
 }
 .socials{
     display: flex;
