--- a/styles/start-screen.css
+++ b/styles/start-screen.css
@@ -2,6 +2,7 @@
     background-image: url("../images/1_1.png");
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     height: 550px;
     width: 100%;
     position: relative;
@@ -20,23 +21,37 @@
 .start-screen__content{
     display: flex;
     flex-direction: column;
-    vertical-align: center;
     z-index: 2;
     position: relative;
+    height: 100%;
+    justify-content: center;
+    gap: 20px;
+    line-height: 150%;
 }
 .start-screen__content h1{
     font-family: var(--font-family-secondary);
     font-size: 60px;
-    margin-top: 115px;
     font-weight: 700;
     letter-spacing: 0;
     line-height: 100%;
-    margin-bottom: 16px;
 }
-.start-screen__content p{
-    margin-bottom: 24px;
-}
+
 .start-screen__content a{
+    display: flex;
+    gap: 8px;
     color: var(--font-color-secondary);
     font-weight: 700;
+}
+.start-screen__content a:hover{
+    color: #91AC46;
+}
+.start-screen__content-research a:focus{
+    border: 1px solid #83A440;
+    margin: 2px 7px 2px 7px;
+}
+.start-screen__content a:active{
+    color: #688B05;
+}
+.start-screen__content p, .start-screen__content h1{
+    max-width: 640px;
 }
