--- a/styles/start-screen.css
+++ b/styles/start-screen.css
@@ -41,6 +41,7 @@
     gap: 8px;
     color: var(--font-color-secondary);
     font-weight: 700;
+    width: 170px;
 }
 .start-screen__content a:hover{
     color: #91AC46;
